@@ -2,3 +2,4 @@ Mon Oct 16 14:48:54 PDT 2006 (adam)
 	Added in Test Suite
 	Created Catalyst::Action::Serialize and Catalyst::Action::Deserialize
 	Added Data::Serializer actions
+	Added status_created helper method
